--- a/apache-config.conf
+++ b/apache-config.conf
@@ -1,22 +1,15 @@
 <VirtualHost *:80>
   ServerAdmin user@mydomain.com
-  DocumentRoot /var/www/
+  DocumentRoot /workingdir/www
 
-  <Directory /var/www/site>
+  <Directory /workingdir/www>
       Options Indexes FollowSymLinks MultiViews
       AllowOverride All
       Order deny,allow
       Allow from all
   </Directory>
 
-  <Directory /var/www/workshop>
-      Options Indexes FollowSymLinks MultiViews
-      AllowOverride All
-      Order deny,allow
-      Allow from all
-  </Directory>
-
-  <Directory /var/www/phpmyadmin>
+  <Directory /workingdir/phpmyadmin>
       Options Indexes FollowSymLinks MultiViews
       AllowOverride All
       Order deny,allow
